--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,10 @@
 ktor {
+    mode = dev
+    mode = ${?ENV_MODE}
     deployment {
         port = 8000
         port = ${?PORT}
+        shutdown.url = "/application/shutdown"
     }
     application {
         modules = [ com.imma.ApplicationKt.module ]
@@ -19,5 +22,14 @@ ktor {
         worker = ${?SNOWFLAKE_WORKER}
         dataCenter = 1
         dataCenter = ${?SNOWFLAKE_DATACENTER}
+    }
+    auth {
+        token.expire.minutes = 10080
+        token.expire.minutes = ${?TOKEN_EXPIRE_MINUTES}
+    }
+    jwt {
+        domain = "https://imma-watchmen.com/"
+        audience = "watchmen"
+        realm = "ktor watchmen app"
     }
 }
