--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,7 +29,8 @@ ktor {
     }
     jwt {
         domain = "https://imma-watchmen.com/"
-        audience = "watchmen"
+        audience = "jwt-audience"
         realm = "ktor watchmen app"
+        hmac256.secret = "0YnKfcWXenwtIpXZr1i7sTS6QntqDL2C"
     }
 }
