--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -23,14 +23,22 @@ ktor {
         dataCenter = 1
         dataCenter = ${?SNOWFLAKE_DATACENTER}
     }
+    content {
+        date.format = "yyyy-MM-dd HH:mm:ss"
+    }
     auth {
         token.expire.minutes = 10080
         token.expire.minutes = ${?TOKEN_EXPIRE_MINUTES}
     }
     jwt {
-        domain = "https://imma-watchmen.com/"
+        domain = "https://imma-watchmen.com"
         audience = "jwt-audience"
         realm = "ktor watchmen app"
         hmac256.secret = "0YnKfcWXenwtIpXZr1i7sTS6QntqDL2C"
+    }
+    admin {
+        username = "watchmen.admin"
+        password = "disable-it"
+        enabled = false
     }
 }
