--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -39,6 +39,6 @@ ktor {
     admin {
         username = "watchmen.admin"
         password = "disable-it"
-        enabled = false
+        enabled = true
     }
 }
