--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -37,7 +37,10 @@ ktor {
     }
     admin {
         username = "watchmen.admin"
+        username = ${?ADMIN_USER}
         password = "disable-it"
+        password = ${?ADMIN_PWD}
         enabled = true
+        enabled = ${?ADMIN_ENABLED}
     }
 }
