--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -9,6 +9,10 @@ ktor {
     application {
         modules = [ com.imma.ApplicationKt.module ]
     }
+    persist {
+        dialectClass = com.imma.persist.mango.MongoPersistKit
+        dialectClass = ${?PERSIST_DIALECT_CLASS}
+    }
     mongo {
         host = localhost
         host = ${?MONGO_HOST}
