--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,8 +10,8 @@ ktor {
         modules = [ com.imma.ApplicationKt.module ]
     }
     persist {
-        dialectClass = com.imma.persist.mango.MongoPersistKit
-        dialectClass = ${?PERSIST_DIALECT_CLASS}
+        defaultKit = mongo
+        dialectClass = ${?PERSIST_DEFAULT_KIT}
     }
     mongo {
         host = localhost
