--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,7 +11,7 @@ ktor {
     }
     persist {
         defaultKit = mongo
-        dialectClass = ${?PERSIST_DEFAULT_KIT}
+        defaultKit = ${?PERSIST_DEFAULT_KIT}
     }
     mongo {
         host = localhost
