--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -47,4 +47,31 @@ ktor {
         enabled = true
         enabled = ${?ADMIN_ENABLED}
     }
+    alarm {
+        mail {
+            enabled = true
+            enabled = ${?ALARM_MAIL_ENABLED}
+            host = ""
+            host = ${?ALARM_MAIL_HOST}
+            port = 25
+            port = ${?ALARM_MAIL_PORT}
+            protocol = "smtp"
+            protocol = ${?ALARM_MAIL_PROTOCOL}
+            auth = true
+            auth = ${?ALARM_MAIL_AUTH}
+            username = ""
+            username = ${?ALARM_MAIL_USER}
+            password = ""
+            password = ${?ALARM_MAIL_PWD}
+            tls.enable = true
+            tls.enable = ${?ALARM_MAIL_TLS_ENABLE}
+            tls.required = true
+            tls.required = ${?ALARM_MAIL_TLS_REQUIRED}
+
+            from = ""
+            from = ${?ALARM_MAIL_FROM}
+            to = [""]
+            to = ${?ALARM_MAIL_TO}
+        }
+    }
 }
