--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,7 @@ ktor_version=1.5.2
 kotlin_version=1.4.32
 logback_version=1.2.3
 kotlin.code.style=official
-spring_data_mango_version=3.1.5
-mongo_driver_version=4.2.2
+spring_version=5.3.5
+spring_data_mango_version=3.1.7
+mongo_driver_version=4.2.3
+mail_version=1.6.6
