--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 ktor_version=1.5.2
 kotlin_version=1.4.32
 logback_version=1.2.3
+jackson_version=2.10.2
 kotlin.code.style=official
 spring_version=5.3.5
 spring_data_mango_version=3.1.7
