--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,12 +14,24 @@ ktor {
         defaultKit = ${?PERSIST_DEFAULT_KIT}
     }
     mongo {
+        enabled = true
+        enabled = ${?MONGO_ENABLED}
         host = localhost
         host = ${?MONGO_HOST}
         port = 27017
         port = ${?MONGO_PORT}
         name = watchmen
         name = ${?MONGO_NAME}
+    }
+    mysql {
+        enabled = ${?MYSQL_ENABLED}
+        host = ${?MYSQL_HOST}
+        port = 3306
+        port = ${?MYSQL_PORT}
+        name = watchmen
+        name = ${?MYSQL_NAME}
+        username = ${?MYSQL_USER}
+        password = ${?MYSQL_PWD}
     }
     snowflake {
         worker = 1
