--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,6 @@ kotlin.code.style=official
 spring_version=5.3.5
 spring_data_mango_version=3.1.7
 mongo_driver_version=4.2.3
+mysql_driver_version=8.0.24
 mail_version=1.6.6
 trino_version=355
