--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,7 @@ ktor {
         name = ${?MONGO_NAME}
     }
     mysql {
+        enabled = false
         enabled = ${?MYSQL_ENABLED}
         host = ${?MYSQL_HOST}
         port = 3306
@@ -32,6 +33,17 @@ ktor {
         name = ${?MYSQL_NAME}
         username = ${?MYSQL_USER}
         password = ${?MYSQL_PWD}
+    }
+    oracle {
+        enabled = false
+        enabled = ${?ORACLE_ENABLED}
+        host = ${?ORACLE_HOST}
+        port = 3306
+        port = ${?ORACLE_PORT}
+        name = watchmen
+        name = ${?ORACLE_NAME}
+        username = ${?ORACLE_USER}
+        password = ${?ORACLE_PWD}
     }
     snowflake {
         worker = 1
