--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 ktor_version=1.5.2
 kotlin_version=1.4.32
+jna_version=5.7.0
 logback_version=1.2.3
 jackson_version=2.10.2
 kotlin.code.style=official
@@ -7,5 +8,6 @@ spring_version=5.3.5
 spring_data_mango_version=3.1.7
 mongo_driver_version=4.2.3
 mysql_driver_version=8.0.24
+oracle_driver_version=12.2.0.1
 mail_version=1.6.6
 trino_version=355
